--- a/app/src/main/res/layout/fragment_gaaaa3333.xml
+++ b/app/src/main/res/layout/fragment_gaaaa3333.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/grad"
     android:layout_height="match_parent"
-    tools:context=".Gaaaa3333Fragment">
+    tools:context=".gthyhyyh.Gaaaa3333Fragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ghyhyhy"
