--- a/app/src/main/res/layout/activity_gammamamammumumummju2.xml
+++ b/app/src/main/res/layout/activity_gammamamammumumummju2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GammamamammumumummjuActivity2">
+    tools:context=".vfbyuj.GammamamammumumummjuActivity2">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/h95hy5hy5hy"
