--- a/app/src/main/res/layout/fragment_gamamamm11111.xml
+++ b/app/src/main/res/layout/fragment_gamamamm11111.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gaam"
-    tools:context=".Gamamamm11111Fragment">
+    tools:context=".gttghyhyjyuj.Gamamamm11111Fragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gthyjuujju"
@@ -51,11 +51,11 @@
     <TextView
         android:layout_width="290dp"
         android:layout_height="50dp"
-        android:background="@color/black"
+        android:background="@color/purple_500"
         android:gravity="center"
         android:text="Cratos bonus here"
         android:textAllCaps="true"
-        android:textColor="@color/purple_500"
+        android:textColor="#A1B4EF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,11 +79,11 @@
     <TextView
         android:layout_width="290dp"
         android:layout_height="50dp"
-        android:background="@color/black"
+        android:background="@color/purple_500"
         android:gravity="center"
         android:text="Enigma bonus here"
         android:textAllCaps="true"
-        android:textColor="@color/purple_500"
+        android:textColor="#A1B4EF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,11 +93,11 @@
     <TextView
         android:layout_width="290dp"
         android:layout_height="50dp"
-        android:background="@color/black"
+        android:background="@color/purple_500"
         android:gravity="center"
         android:text="arch bonus here"
         android:textAllCaps="true"
-        android:textColor="@color/purple_500"
+        android:textColor="#A1B4EF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
